--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -41,5 +41,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "xxx",
+      "url": "https://github.com/jilleJr/Newtonsoft.Json-for-Unity.git#upm",
+      "scopes": [
+        "xxx"
+      ]
+    }
+  ]
 }
